<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_map"
        android:title="@string/show_map"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more_item">
        <menu>
            <item
                android:id="@+id/language_english"
                android:title="@string/english"
                app:showAsAction="never"/>

            <item
                android:id="@+id/language_indonesian"
                android:title="@string/indonesia"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>