<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/header_card"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:clipToPadding="true"
            android:radius="0dp"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="?attr/colorPrimary">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/name_dummy"
            android:alpha="0.8"
            tools:src="@color/gray_btn_bg_color"
            android:transitionName="photo" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:padding="16dp"
        android:elevation="4dp"
        android:clipToPadding="false"
        app:cardElevation="8dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/header_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/story_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:gravity="center"
            android:background="@drawable/overlay_bg"
            tools:text="@string/tgl_dummy"
            android:transitionName="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="36dp"
                android:textSize="24sp"
                android:transitionName="name"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:transitionName="description"
                tools:text="@string/teks_dummy" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/detail_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>