<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/name_dummy"
                android:background="@android:color/darker_gray"
                android:clipToOutline="true"
                android:outlineProvider="background"
                android:transitionName="photo"/>

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:padding="10dp"
                android:background="@drawable/overlay_bg"
                android:text="@string/tgl_dummy"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:transitionName="date"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_dummy"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"
                android:lineSpacingExtra="4dp"
                android:transitionName="name"/>

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_dummy"
                android:textColor="@android:color/darker_gray"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="14sp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2dp"
                android:transitionName="description" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>